z-index fix

--- a/css/application.css
+++ b/css/application.css
@@ -230,7 +230,7 @@ p {
     height: 100px;
     background: white;
     padding: 10px;
-    z-index: 100000; }
+    z-index: 999; }
     #chart-interface-container .fixed-tooltip.bordered {
       border: 1px dashed black; }
     #chart-interface-container .fixed-tooltip.bordered.tipleft {
