--- a/scss/components/_chart.scss
+++ b/scss/components/_chart.scss
@@ -51,7 +51,7 @@ $card_size: 100px;
     background: white;
     padding: 10px;
 
-    z-index: 100000;
+    z-index: 999;
 
     &.bordered {
       border: 1px dashed black;
